Fix overflow issue with inline code blocks (#259)

--- a/packages/www/src/layouts/LayoutEntry.css
+++ b/packages/www/src/layouts/LayoutEntry.css
@@ -55,6 +55,8 @@
 }
 
 .entry-content > p {
+  /* fix for long inline codeblocks causing layout issues */
+  overflow-x: scroll;
   @apply py-3 text-gray-800 leading-8;
 }
 
